[project]
name = "seac"
version = "0.1.0"
description = "Shared experience Actor Critic"
authors = [
    {name = "shriman",email = "shrimansoft@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py (>=2.1.0,<3.0.0)",
    "ale-py (==0.10.2)",
    "asttokens (>=3.0.0,<4.0.0)",
    "cloudpickle (>=3.1.1,<4.0.0)",
    "colorama (==0.4.6)",
    "contourpy (==1.3.1)",
    "cycler (==0.12.1)",
    "decorator (>=5.2.1,<6.0.0)",
    "docopt-ng (==0.9.0)",
    "exceptiongroup (>=1.2.2,<2.0.0)",
    "executing (>=2.2.0,<3.0.0)",
    "farama-notifications (>=0.0.4,<0.0.5)",
    "filelock (==3.17.0)",
    "fonttools (==4.56.0)",
    "fsspec (==2025.2.0)",
    "gitdb (==4.0.12)",
    "gitpython (==3.1.44)",
    "grpcio (>=1.70.0,<2.0.0)",
    "gymnasium (==1.0.0)",
    "ipython (>=8.32.0,<9.0.0)",
    "jax-jumpy (>=1.0.0,<2.0.0)",
    "jedi (>=0.19.2,<0.20.0)",
    "jinja2 (==3.1.5)",
    "jsonpickle (==4.0.1)",
    "kiwisolver (==1.4.8)",
    "lbforaging (==2.0.0)",
    "markdown (>=3.7,<4.0)",
    "markdown-it-py (==3.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "matplotlib (==3.10.0)",
    "matplotlib-inline (>=0.1.7,<0.2.0)",
    "mdurl (==0.1.2)",
    "mpmath (==1.3.0)",
    "munch (==4.0.0)",
    "networkx (==3.4.2)",
    "numpy (>=2.2.3,<3.0.0)",
    "nvidia-cublas-cu12 (==12.4.5.8)",
    "nvidia-cuda-cupti-cu12 (==12.4.127)",
    "nvidia-cuda-nvrtc-cu12 (==12.4.127)",
    "nvidia-cuda-runtime-cu12 (==12.4.127)",
    "nvidia-cudnn-cu12 (==9.1.0.70)",
    "nvidia-cufft-cu12 (==11.2.1.3)",
    "nvidia-curand-cu12 (==10.3.5.147)",
    "nvidia-cusolver-cu12 (==11.6.1.9)",
    "nvidia-cusparse-cu12 (==12.3.1.170)",
    "nvidia-cusparselt-cu12 (==0.6.2)",
    "nvidia-nccl-cu12 (==2.21.5)",
    "nvidia-nvjitlink-cu12 (==12.4.127)",
    "nvidia-nvtx-cu12 (==12.4.127)",
    "opencv-python (==4.11.0.86)",
    "packaging (>=24.2,<25.0)",
    "pandas (==2.2.3)",
    "parso (>=0.8.4,<0.9.0)",
    "pexpect (>=4.9.0,<5.0.0)",
    "pillow (>=10.4.0,<11.0)",
    "platformdirs (==4.3.6)",
    "prompt-toolkit (>=3.0.50,<4.0.0)",
    "protobuf (==4.25.3)",
    "psutil (==7.0.0)",
    "ptyprocess (>=0.7.0,<0.8.0)",
    "pure-eval (>=0.2.3,<0.3.0)",
    "py-cpuinfo (==9.0.0)",
    "pygame (==2.6.1)",
    "pyglet (==1.5.31)",
    "pygments (>=2.19.1,<3.0.0)",
    "pyparsing (==3.2.1)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.1)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "rich (==13.9.4)",
    "sacred (==0.8.7)",
    "six (>=1.17.0,<2.0.0)",
    "smmap (==5.0.2)",
    "stable-baselines3 (==2.5.0)",
    "stack-data (>=0.6.3,<0.7.0)",
    "tensorboard (>=2.19.0,<3.0.0)",
    "tensorboard-data-server (>=0.7.2,<0.8.0)",
    "tomli (==2.2.1)",
    "torch (==2.6.0)",
    "torchaudio (==2.6.0)",
    "torchvision (==0.21.0)",
    "tqdm (==4.67.1)",
    "traitlets (>=5.14.3,<6.0.0)",
    "triton (==3.2.0)",
    "typing-extensions (>=4.12.2,<5.0.0)",
    "tzdata (==2025.1)",
    "wcwidth (>=0.2.13,<0.3.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "wrapt (==1.17.2)",
    "yapf (==0.43.0)",
    "moviepy (>=2.1.2,<3.0.0)",
    "rware @ git+https://github.com/semitable/robotic-warehouse.git"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
